--- a/model_notebook.ipynb
+++ b/model_notebook.ipynb
@@ -187,13 +187,31 @@
     }
    ],
    "source": [
-    "pred = model.predict(X_test)\n",
+    "pred = pipe.predict(X_test)\n",
     "print('RMSE = ', np.sqrt(mean_squared_error(pred, y_test)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE =  5600.288686865197\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = model.predict(X_test)\n",
+    "print('RMSE = ', np.sqrt(mean_squared_error(pred, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +262,7 @@
        "2   28  male  33.0         3     no  southeast"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +289,13 @@
     "pred1 = model.predict(one_input)\n",
     "print('Predicted Charge = ', pred1[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
